Fix spacing and sizing of objects

--- a/_sass/components/_game.scss
+++ b/_sass/components/_game.scss
@@ -1,26 +1,4 @@
-.game {
-    display: grid;
-	margin: 0 auto;
-    align-items: center;
-    justify-items: center;
-
-    svg {
-        width: 100%;
-        max-width: 300px;
-        
-        @media (prefers-reduced-motion: no-preference) {
-            &.jiggle:hover {
-                animation: jiggle 0.2s infinite;
-            }
-            
-            &.rise-and-fall:hover {
-                animation: rise-and-fall .75s infinite alternate-reverse;
-            }
-        }
-    }
-}
-
- svg#gameboy {
+svg#gameboy {
     --gb-power: rgb(74,159,101);    
     --gb-shell--stroke: light-dark(rgb(40,40,40), rgb(175,175,175));
     --gb-shell--fill: light-dark(rgb(50,50,50), rgb(220,220,220));
